Issue #3082694 by pzajacz, fhaeberle, bnjmnm: Extra space between message and content when content has elements with margin-top
(cherry picked from commit d589038dec76ae217d204f1127fa49d3eab7d26a)

--- a/css/src/components/messages.css
+++ b/css/src/components/messages.css
@@ -1,5 +1,8 @@
 /**
  * Messages.
+ *
+ * @todo revisit this after https://www.drupal.org/project/drupal/issues/3078400
+ *   has been resolved.
  */
 
 @import "../base/variables.css";
@@ -119,8 +122,9 @@
   margin-top: var(--space-s);
 }
 
-.messages-list {
-  padding-bottom: var(--space-l);
+.messages:last-child,
+.messages-list__item:last-child {
+  margin-bottom: calc(var(--space-l) + var(--space-m));
 }
 
 @media screen and (-ms-high-contrast: active) {
